
2009-03-19:
Added function arg_def, func_def, and func_class to formula1.js and socialcalcconstants.js.
Added definitions to all functions.
Added function information routines FillFunctionInfo and FunctionArgString.
Added prompt to InputEcho to show function argument prompts.
Added function list dialog to ssctrltest1.html.
Added SocialCalc.EditorAddToInput for pasting function starts, etc.

2009-03-23:
Added formula bar buttons to socialcalcspreadsheetcontrol.js.
Moved function list as a formula bar button in socialcalcspreadsheetcontrol.js.
Added Multi-line input box dialog and support.

2009-03-24:
Tuned multi-line input to handle disabling inputbox when editing and when multi-line cell content.


TO DO:

Handle unknown function better - should be error message but propogate OK.
Handle bad settings
Make sure insert/delete row/col and move handle name coord changing undo.
Need some way to abort recalc -- like pressing Esc?


Limit undo size?
1 row scroll of high cells doesn't update row height values or something -
 scroll in Merges and Scrolling when 2 panes -- may be dragging when scrolled
 doesn't know trying to set too far: check test
Bug in SocialCalc.pm: adjust_formula_coords refs to deleted cells -- doesn't handle multiple
Bug in Sheet.pm: test_criteria tests "value" instead of "type" for left error
Check SheetFunctions.pm: Dseries with criteria of "0" -- checks for blank as !criteria, not length
 Also, see double testcol setting.
INDEX function (and range return from evaluate polish) does not handle other sheets.
 Make DecodeRangeParts get that stuff to make it easy?
Bug in SheetFunctions.pm: StringFunctions error doesn't return right away
 RIGHT has -1 args?
 InterestFunctions: should be -3 args?
 IRR check for values?
Bug in Sheet.pm: evaluate_parsed_formula return of range doesn't swap sheetname!coord
Sheet.ResetSheet doesn't seem to work well -- it does not recalc or redisplay well afterward
