@@ -470,6 +470,7 @@ Added Multi-line input box dialog and support.
 
 2009-03-24:
 Tuned multi-line input to handle disabling inputbox when editing and when multi-line cell content.
+Added SocialCalc.Formula.FreshnessInfo to help determine if calculations are out of date.
 
 
 TO DO:
